# wrix

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  data.db  package-lock.json  tailwind.config.js
public/: chat.html  login.html  style.css
src/: auth.rs  main.rs  message_handler.rs  structs.rs  ws.rs
