[package]
name = "wrix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
dotenvy = "0.15.7"
futures = "0.3.32"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = "0.3.47"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tower-sessions = "0.15.0"
urlencoding = "2.1.3"
uuid = { version = "1.23.2", features = ["v4"] }
